--- a/day_1/style.css
+++ b/day_1/style.css
@@ -21,6 +21,7 @@
   border-radius: 20px;
   display: block;
 }
+
 .card {
   width: 345px;
   height: 540px;
@@ -53,4 +54,58 @@
   font-size: 14px;
   margin-top: 2px;
   margin-bottom: 35px;
+}
+
+/* contenu du milieu */
+
+.middle_card {
+    margin-top: 25px;
+}
+
+.image_middle {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+/* chaque item : image + texte côte à côte */
+.menu-item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.menu-item img {
+  width: 25px;
+  height: 25px;
+  flex-shrink: 0;
+}
+
+.menu-item p {
+  flex: 1;
+  color: #333;
+  font-size: 14px;
+}
+
+/* Chevron à droite */
+.menu-item::after {
+  content: ">";
+  font-size: 18px;
+  margin-right: 25px;
+  color: #666;
+}
+
+/* footer */
+
+.footer_card {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.footer_card img {
+    width: 25px;
+    height: 25px;
+
 }
